# glottisdale

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: audio_test.rs
crates/core/src/: cache.rs  lib.rs  names.rs  types.rs
crates/core/src/audio/: analysis.rs  effects.rs  io.rs  mod.rs  playback.rs
crates/core/src/collage/: mod.rs  process.rs  shuffle.rs  stretch.rs
crates/core/src/editor/: bank_builder.rs  effects_chain.rs  mod.rs  pipeline_bridge.rs  playback_engine.rs  render.rs  types.rs  waveform.rs
crates/core/src/language/: align.rs  g2p.rs  mod.rs  phonotactics.rs  syllabify.rs  syllabify_arpabet.rs  syllabify_ipa.rs  transcribe.rs
crates/core/src/sing/: midi_parser.rs  mixer.rs  mod.rs  syllable_prep.rs  synthesize.rs  vocal_mapper.rs
crates/core/src/speak/: assembler.rs  matcher.rs  mod.rs  phonetic_distance.rs  syllable_bank.rs  target_text.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  main.rs
crates/gui/src/editor/: mod.rs  timeline.rs  waveform_painter.rs
docs/: README.md
docs/getting-started/: install.md  quickstart.md
docs/guide/: examples.md  troubleshooting.md
docs/legacy/: 2026-02-15-glottisdale-audio-polish-design.md  2026-02-15-glottisdale-audio-polish-implementation.md  2026-02-15-glottisdale-design.md  2026-02-15-glottisdale-implementation.md  2026-02-15-glottisdale-natural-speech-design.md  2026-02-15-glottisdale-natural-speech-implementation.md  2026-02-16-hymnal-gargler-design.md  2026-02-16-hymnal-gargler-implementation.md  2026-02-19-glottisdale-stretch-repeat-design.md  2026-02-19-glottisdale-stretch-repeat-implementation.md  README.md  python-api.md
docs/plans/: 2026-02-19-documentation-overhaul-design.md  2026-02-19-documentation-overhaul-implementation.md  2026-02-19-unique-run-naming-design.md  2026-02-19-unique-run-naming-implementation.md  2026-02-20-speak-subcommand-design.md  2026-02-20-speak-subcommand-implementation.md  2026-02-21-playback-fix-design.md  2026-02-21-playback-fix-implementation.md  2026-02-21-syllable-editor-design.md  2026-02-21-syllable-editor-implementation.md  2026-02-21-zero-install-native-deps-design.md  2026-02-21-zero-install-native-deps-implementation.md  2026-02-22-editor-settings-integration-design.md
docs/reference/: architecture.md  philosophy.md
docs/specs/: 2026-03-14-shuffle-mode-design.md
src/glottisdale/: __init__.py  __main__.py  analysis.py  audio.py  cache.py  cli.py  names.py  types.py
tests/: test_cache.py  test_names.py  test_types.py
tests/collage/: test_align.py  test_analysis.py  test_audio.py  test_bfa.py  test_cli.py  test_integration.py  test_phonotactics.py  test_pipeline.py  test_stretch.py  test_syllabify.py  test_syllabify_ipa.py  test_transcribe.py
tests/sing/: test_integration.py  test_midi_parser.py  test_mixer.py  test_syllable_prep.py  test_vocal_mapper.py
tests/speak/: test_assembler.py  test_cli.py  test_integration.py  test_matcher.py  test_phonetic_distance.py  test_syllable_bank.py  test_target_text.py
(+21 files in other folders)
