[workspace]
members = ["crates/core", "crates/cli", "crates/gui"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
glottisdale-core = { path = "crates/core" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
sha2 = "0.10"
lazy_static = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "wav"] }
ssstretch = "0.1"
