[project]
name = "glottisdale"
version = "0.1.0"
description = "Syllable-level audio collage and vocal MIDI mapping tool"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"

dependencies = [
    "openai-whisper",
    "g2p_en",
    "scipy",
    "numpy",
]

[project.optional-dependencies]
sing = ["pretty_midi>=0.2.10"]
bfa = ["bournemouth-forced-aligner>=1.1.0"]
slack = ["slack-sdk>=3.27.0", "requests>=2.31.0"]
dev = ["pytest>=8.0.0"]
all = ["glottisdale[sing,bfa,slack]"]

[project.scripts]
glottisdale = "glottisdale.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
