[package]
name = "glottisdale-core"
version.workspace = true
edition.workspace = true

[features]
default = []
whisper-native = ["whisper-rs"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
rand.workspace = true
sha2.workspace = true
lazy_static.workspace = true
hound = "3"
rubato = "0.16"
rodio = "0.20"
midly = "0.5"
whisper-rs = { version = "0.13", optional = true }
