[package]
name = "glottisdale-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "glottisdale-gui"
path = "src/main.rs"

[dependencies]
glottisdale-core.workspace = true
anyhow.workspace = true
eframe = "0.31"
rfd = "0.15"
log.workspace = true
env_logger.workspace = true
serde_json.workspace = true
